[package]
name = "rpmalloc"
authors = ["Matis Granger <matis@devyos.com>"]
description = "Rust bindings for rpmalloc"
license = "BSD-3"
repository = "https://github.com/wearedevyos/rpmalloc"
version = "1.0.0"
rust-version = "1.95.0" # cold_path
edition = "2024"
build = "build.rs"
keywords = ["allocator", "rpmalloc"]
categories = ["memory-management", "external-ffi-bindings"]

[dependencies]
libc = "0.2"

# Limited to 0.2.x because of hashbrown. :(
allocator-api2 = { version = "^0.2.21" }

[build-dependencies]
pkg-config = "0.3.14"
cc = "1"

[features]
default = ["first_class_heaps"]
#preload = []                    # Compile with ENABLE_PRELOAD=1
statistics = []                 # Compile with ENABLE_STATISTICS=1
#validate_args = []              # Compile with ENABLE_VALIDATE_ARGS=1
asserts = []                    # Compile with ENABLE_ASSERTS=1
guards = []                     # Compile with ENABLE_GUARDS=1
unlimited_cache = []            # Compile with ENABLE_UNLIMITED_CACHE=1
unlimited_global_cache = []     # Compile with ENABLE_UNLIMITED_GLOBAL_CACHE=1
unlimited_thread_cache = []     # Compile with ENABLE_UNLIMITED_THREAD_CACHE=1
global_cache = []               # Compile with ENABLE_GLOBAL_CACHE=1
thread_cache = []               # Compile with ENABLE_THREAD_CACHE=1
adaptive_thread_cache = []      # Compile with ENABLE_ADAPTIVE_THREAD_CACHE=1
first_class_heaps = []          # Compile with FIRST_CLASS_HEAPS=1
unstable-allocator-api = ["allocator-api2/nightly"]